k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hllc-store
spec:
  ingressClassName: traefik
  rules:
    - host: hllc.mfu.ac.th
      http:
        paths:
          - path: /store
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
